--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -1,7 +1,81 @@
-<html>
-	<head>
-	</head>
-	<body>
-		Project 3-1 here
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+  <style>
+    body {
+      padding: 100px;
+      width: 1000px;
+      margin: auto;
+      text-align: left;
+      font-weight: 300;
+      font-family: 'Open Sans', sans-serif;
+      color: #121212;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+  </style>
+  <title>CS 184 Path Tracer</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+</head>
+
+
+<body>
+
+  <h1 align="middle">CS 284: Computer Graphics and Imaging, Spring 2022</h1>
+  <h1 align="middle">Project 3: Path Tracer</h1>
+  <h2 align="middle">Xiao Song (xiaosx@berkeley.edu), Haohua Lyu (haohua@berkeley.edu)</h2>
+
+  <br><br>
+
+  <div>
+
+
+    <h2 align="middle">Part 1: Ray Generation and Scene Intersection</h2>
+
+	<h2 align="middle">Part 2: Bounding Volume Hierarchy</h2>
+
+	<h2 align="middle">Part 3: Direct Illumination</h2>
+
+	<h2 align="middle">Part 4: Global Illumination</h2>
+
+	<h2 align="middle">Part 5: Adaptive Sampling</h2>
+
+
+    <p>txt<code>curve3.bzc</code>text</p>
+	<ol>
+		<li>list1</li>
+		<li>list2</li>
+		<li>list3</li>
+	</ol>
+		
+	<div align="middle">
+		<table style="width=100%">
+		  <tr>
+			<td>
+			  <img src="images/p1_raw.png" align="middle" width="500px"/>
+			  <figcaption align="middle">The new <code>bzc/curve3.bzc</code> created, with 6 control points shown.</figcaption>
+			</td>
+			<td>
+			  <img src="images/p1_curve.png" align="middle" width="500px"/>
+			  <figcaption align="middle">The new <code>bzc/curve3.bzc</code> created, with the curve shown.</figcaption>
+			</td>
+		  </tr>
+		</table>
+	</div>
+	
+	<h3 align="middle">Appendix</h3>
+
+	<a href="https://cal-cs184-student.github.io/sp22-project-webpages-Haohua-Lyu-and-Xiao-Song/">Link to project webpage</a>
+
+</body>
+
 </html>
