--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -171,7 +171,7 @@
 		  <tr>
 			<td>
 				<img src="part2_visual/p2_bunny.png" align="middle" width="500px"/>
-				<figcaption align="middle"><code>\sky\CBbunny.dae</code> rendered with BVH implemented.</figcaption>
+				<figcaption align="middle"><code>\sky\bunny.dae</code> rendered with BVH implemented.</figcaption>
 			</td>
 			<td>
 				<img src="part2_visual/p2_dragon.png" align="middle" width="500px"/>
